--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=root
-DATABASE_HOST=localhost
+RAILS_ENV=development
+POSTGRES_HOST=db
+POSTGRES_DB=test_db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=root
+# RAILS_MASTER_KEY=8af814b3e08d9e263c6635f231fc541f
