--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,28 @@ services:
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: password
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
   redis:
     image: redis
     command: redis-server
     volumes:
       - 'redis:/data'
+
+  sidekiq:
+    build: .
+    depends_on:
+      - redis
+    command: bundle exec sidekiq -C config/sidekiq.yml
+    environment:
+      - REDIS_URL_SIDEKIQ=redis://redis:6379/0
+    env_file: .env
+
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails db:seed && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/threded_forum
     ports:
@@ -23,10 +36,15 @@ services:
       - redis
     environment:
       - REDIS_URL_CACHING=redis://redis:6379/0
-      - DATABASE_HOST=db
-      - DATABASE_USERNAME=postgres
-      - DATABASE_PASSWORD=password
-
+      - RAILS_ENV=${RAILS_ENV}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}      
 volumes:
   redis:
   postgres:
+
+    # app:
+    #   tty: true
+    #   stdin_open: true
